--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Zoology -- History'
 - !lcc 'QL'
+- GITenberg
 title: La philosophie zoologique avant Darwin
 url: http://www.gutenberg.org/ebooks/32297
